--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,23 @@
         <activity
             android:name=".Activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Activity.ReadyToLearnActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
+        <activity android:name=".Activity.LearnEnglishActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
+        <activity android:name=".Activity.LearningRecordActivity" />
+        <activity android:name=".Activity.LeadSubmitUserNameActivity" />
+        <activity android:name=".Activity.LeadSelectWordsLibraryActivity" />
+        <activity
+            android:name=".Activity.StartAnimationActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.ReadyToLearnActivity" />
-        <activity android:name=".Activity.LearnEnglishActivity" />
-        <activity android:name=".Activity.LearningRecordActivity"></activity>
     </application>
 
 </manifest>
