--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,12 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://jitpack.io" }
+        repositories {
+            flatDir {
+                dirs 'libs'
+            }
+        }
     }
 }
 
