--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,24 @@
             android:name=".Activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Activity.ReadyToLearnActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"/>
-        <activity android:name=".Activity.LearnEnglishActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"/>
+        <activity
+            android:name=".Activity.ReadyToLearnActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
+            android:name=".Activity.LearnEnglishActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".Activity.LearningRecordActivity" />
         <activity android:name=".Activity.LeadSubmitUserNameActivity" />
         <activity android:name=".Activity.LeadSelectWordsLibraryActivity" />
-        <activity
-            android:name=".Activity.StartAnimationActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar">>
+        <activity android:name=".Activity.StartAnimationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activity.ReviewActivity" />
+        <activity android:name=".Activity.SettingActivity" ></activity>
     </application>
 
 </manifest>
